scripts/nullaway/annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8.txt
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/P040.java:65: error: [NullAway] dereferenced expression this.getIndices() is @Nullable
            if (this.getIndices().contains(current)) {
                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:57: error: [NullAway] dereferenced expression this.getTriangle().get(i) is @Nullable
                this.getTriangle().get(i)[j]
                                         ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:58: error: [NullAway] dereferenced expression this.getTriangle().get(i + 1) is @Nullable
                        += Math.max(this.getTriangle().get(i + 1)[j], this.getTriangle().get(i + 1)[j + 1]);
                                                                 ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:58: error: [NullAway] dereferenced expression this.getTriangle().get(i + 1) is @Nullable
                        += Math.max(this.getTriangle().get(i + 1)[j], this.getTriangle().get(i + 1)[j + 1]);
                                                                                                   ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/AbstractProblem18Problem67.java:61: error: [NullAway] dereferenced expression this.getTriangle().get(0) is @Nullable
        return this.getTriangle().get(0)[0];
                                        ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p1to19/P011.java:70: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return grid;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p1to19/P014.java:38: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return this.chainLengths;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/CommonTest.java:170: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
            assertTrue(e.getMessage().contains("non-negative"));
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/CommonTest.java:187: error: [NullAway] dereferenced expression e.getMessage() is @Nullable
            assertTrue(e.getMessage().contains("39"));
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P028.java:27: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return numberSquare;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url8e6440c8aa_robdimsdale_project_euler_tgz-pJ8-com_rmd_personal_projecteuler_MainJ8/src/com/rmd/personal/projecteuler/p20to39/P024.java:53: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return remainingDigits;
        ^
    (see http://t.uber.com/nullaway )
11 errors
